--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "joi": "^17.7.0",
+    "joi-objectid": "^4.0.2",
     "mongodb": "^4.12.0",
     "mongoose": "^6.7.3"
   },
