--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "joi": "^17.7.0",
     "joi-objectid": "^4.0.2",
     "mongodb": "^4.12.0",
-    "mongoose": "^6.7.3"
+    "mongoose": "^6.7.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
